--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>가위바위보게임</title>
   </head>
+  <style> 
+    body { 
+      background-color: #40089a;      color: #fff; 
+    }
+  </style>
   <body>
     <div id="root"></div>
   </body>
